--- a/5.17/JS 더 들어가기/index.html
+++ b/5.17/JS 더 들어가기/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>자바스크립트를 배워봅시다</h1>
+    <p id="login-link">로그인</p>
+
     <script src="./app.js"></script>
 </body>
 </html>
